# lerobot-robot-franka-research3

./: README.md  README.zh-CN.md  pyproject.toml
franka_qt/: franka_qt.ui  franky_qt.py
lerobot_robot_franka_research3/: __init__.py  config_franka_research3.py  franka_research3.py  robot_utils.py  serial_gripper.py
tests/: test_plugin.py
