[build-system]
requires = ["setuptools>=61", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_franka_research3"
dynamic = ["version"]
description = "Franky-backed Franka Research 3 robot integration with LeRobot"
readme = "README.md"
authors = [
  { name = "XenseRobotics" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "lerobot>=0.4",
  "numpy",
  "franky-control>=1.1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_robot_franka_research3", "lerobot_robot_franka_research3.*"]
exclude = ["*.egg-info"]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
fallback_version = "0.0.0"
